<resources>
    <string name="app_name">QFlow</string>
    <string name="loginQR">Accede con QR</string>
    <string name="loginApprender">Accede con Apprender</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="entrar">Entrar</string>
    <string name="Cancel">Cancel</string>
    <string name="app_name_icon">app_name</string>
    <string name="name_profile">Javier</string>
    <string name="progress_percent">75%</string>
    <string name="thanks_for_signing_up">Thanks for signing up</string>
    <string name="face">Facebook</string>
    <string name="facebook_app_id">Facebook App ID</string>
    <string name="twitter">Twitter</string>
    <string name="Google">Google</string>
    <string name="usermail">Mail o nombre de usuario</string>
    <string name="mail">\"Mail: \"</string>
    <string name="correo_electr_nico">mail</string>
    <string name="cancel">cancel</string>
    <string name="repeat_password">Repeat password</string>
    <string name="email">Email</string>
    <string name="name_lastName">Name and last name</string>
    <string name="accept">Accept</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="code" />
    <string name="your_current_queues">Your current queues</string>
    <string name="join_queue">Join queue</string>
    <string name="user_profile_picture_text">User profile picture</string>
    <string name="join_code">Join Code </string>
    <string name="join">Join</string>
    <string name="scan_qr">Scan QR </string>
    <string name="NameApp">Qflow users</string>
    <string name="date_created">date_created</string>
    <string name="is_active">is_active</string>
    <string name="point_at_a_qflow_qr_with_a_queue">Point at a QFlow QR to load a Queue</string>
    <string name="info_queue">Info</string>
    <string name="historial_queue">Your past queues</string>
    <string name="JoinQueue">Join Queue</string>
    <string name="turns_wait">Waiting turn</string>
    <string name="start">"Start "</string>
    <string name="active">Locked </string>
    <string name="NoPermissionsCamera">You need to give camera permissions in order to scan QRs</string>
</resources>
