<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/thanks_for_signing_up"
        android:textSize="36sp"
        android:padding="20dp"/>

    <EditText
        android:id="@+id/dialog_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:hint="@string/username"
        android:importantForAutofill="no"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/dialog_mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/correo_electr_nico"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:layout_below="@+id/dialog_username"  />


    <EditText
        android:id="@+id/dialog_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:layout_below="@+id/dialog_mail" />

    <Button
        android:id="@+id/dialog_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dialog_password"
        android:text="@string/cancel" />

    <Button
        android:id="@+id/dialog_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dialog_password"
        android:layout_toRightOf="@id/dialog_cancel"
        android:layout_toEndOf="@id/dialog_cancel"
        android:text="@string/entrar" />


</RelativeLayout>
