<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/id_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryLightColor">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/list_profile"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primaryLightColor"
        tools:context=".views.fragments.HomeFragment">

        <ImageView
            android:id="@+id/img_profile"
            android:layout_width="97dp"
            android:layout_height="76dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/dummy_profile"
            android:contentDescription="@string/user_profile_picture_text" />

        <TextView
            android:id="@+id/textViewQ"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="65dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="65dp"
            android:text="@string/your_current_queues"
            android:textColor="@color/primaryTextColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_profile" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView2"
            android:layout_width="385dp"
            android:layout_height="88dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewQ"
            tools:listitem="@layout/item_profile">


        </androidx.recyclerview.widget.RecyclerView>

        <Button
            android:id="@+id/btn_join_queue"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/oval_button"
            android:text="@string/join_queue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recyclerView2" />



    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>
